--- a/todo-backend/package.json
+++ b/todo-backend/package.json
@@ -5,6 +5,7 @@
   "main": "server.js ",
   "scripts": {
     "start": "nodemon server.js",
+    "build": "npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Barath C",
