--- a/todo-frontend/package.json
+++ b/todo-frontend/package.json
@@ -4,38 +4,38 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "npm install && ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.3",
-    "@angular/cdk": "^12.0.4",
-    "@angular/common": "~12.0.3",
-    "@angular/compiler": "~12.0.3",
-    "@angular/core": "~12.0.3",
-    "@angular/forms": "~12.0.3",
-    "@angular/material": "^12.0.4",
-    "@angular/platform-browser": "~12.0.3",
-    "@angular/platform-browser-dynamic": "~12.0.3",
-    "@angular/router": "~12.0.3",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.1.0",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "~15.1.5",
+    "@angular/cdk": "^15.1.5",
+    "@angular/common": "~15.1.5",
+    "@angular/compiler": "~15.1.5",
+    "@angular/core": "~15.1.5",
+    "@angular/forms": "~15.1.5",
+    "@angular/material": "^15.1.5",
+    "@angular/platform-browser": "~15.1.5",
+    "@angular/platform-browser-dynamic": "~15.1.5",
+    "@angular/router": "~15.1.5",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.5.0",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.3",
-    "@angular/cli": "~12.0.3",
-    "@angular/compiler-cli": "~12.0.3",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~3.7.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "typescript": "~4.2.3"
+    "@angular-devkit/build-angular": "~15.1.6",
+    "@angular/cli": "~15.1.6",
+    "@angular/compiler-cli": "~15.1.5",
+    "@types/jasmine": "~4.3.1",
+    "@types/node": "^18.14.0",
+    "jasmine-core": "~4.5.0",
+    "karma": "~6.4.1",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
+    "typescript": "~4.9.5"
   }
 }
