--- a/todo-frontend/angular.json
+++ b/todo-frontend/angular.json
@@ -23,7 +23,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "../todo-backend/public",
+            "outputPath": "../todo-backend/src/public",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
